1998-11-28  Sam Hartman  <hartmans@mesas.com>

	* krshd.c krsh.c:  Use RCMD_BUFSIZ not RSH_BUFSIZE [krb5-appl/678]

	* kcmd.c: Move RCMD_BUFSIZ into defines.h

1998-11-16  Geoffrey King  <gjking@mit.edu>

	* login.c (login_get_kconf): Also test whether *kconf_val is null
 		rather than just kconf_val before passing *kconf_val to
 		conf_affirmative (where strcasecmp will choke on it
		if it is in fact null).

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)


1998-10-24  Marc Horowitz  <marc@mit.edu>

	* login.c: update to new get_creds API
	
	* krlogin.c (main, oob, server_message, control), krlogind.c
		(sendoob, protocol, recvauth): If the enctype is not
		similar to DES, use an inband signalling protocol instead
		of MSG_OOB data to indicate status changes.

	* kcmd.c (rcmd_stream_init_krb5, v5_des_read, v5_des_write):
		update to new crypto API.  Add ivec chaining to
		encryption when the enctype is not similar to DES as part
		of the new protocol.

1998-10-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* krshd.c (doit): Apply ghudson's patch so that rshd passes the
		port numbers for the local and foreign addresses so that
		the V4 encrypted RCP will work correctly.  [krb5-appl/638]
	* v4rcp.c (answer_auth): Apply ghudson's patch so that if
		KRB5LOCALPORT and KRB5REMOTEPORT are set, use them to set
		the foreign and local ports so that encrypted rcp for the
		same machine.  [krb5-appl/638]

Tue Aug 18 16:48:02 1998  Tom Yu  <tlyu@mit.edu>

	* krlogin.c: Add <sys/filio.h> for FIONREAD.

Sat Aug 15 00:01:15 1998  Geoffrey King  <gjking@mit.edu>

	* krcp.c (error): Don't call rcmd_stream_write if iamremote is not
 	set, because it expects a valid file descriptor [krb5-appl/359].
  	Also, remove mistakenly duplicated comment above the function.

Mon Jul 27 00:06:20 1998  Geoffrey King  <gjking@mit.edu>
